[gd_scene load_steps=8 format=2]

[ext_resource path="res://Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://GroundCollision.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sounds/Caterpiller Jump.wav" type="AudioStream" id=4]
[ext_resource path="res://Game.gd" type="Script" id=5]
[ext_resource path="res://assets/sounds/Caterpiller Menu.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/Start Sound.wav" type="AudioStream" id=7]

[node name="Game" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="GroundCollision" parent="." instance=ExtResource( 2 )]
position = Vector2( 533.856, 554.145 )

[node name="EnemySpawnTimer" type="Timer" parent="."]

[node name="Menu" parent="." instance=ExtResource( 3 )]

[node name="InGameMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="StartSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]
